--- a/SDL_CreateCond.mediawiki
+++ b/SDL_CreateCond.mediawiki
@@ -16,14 +16,26 @@ Returns ^a pointer to the SDL_cond structure that is created / filled with the c
 
 == Code Examples ==
 ```c++
-You can add your code example here
+SDL_cond *cond;
+
+cond=SDL_CreateCond();
+.
+.
+/* Do stuff */
+.
+.
+SDL_DestroyCond(cond);
 ```
 
 == Remarks ==
 ''You can add useful comments here''
 
+<<Color2(green,Since this has no params does it actually ''create'' the structure or does it just assign an existing structure to a thread?)>>
+
 == Related Functions ==
-:[[SDL_DestroyCond]]
+:[[SDL_CondSignal]] *
+:[[SDL_CondWait]] *
+:[[SDL_DestroyCond]] *
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
