--- a/SDL_DestroyMutex.mediawiki
+++ b/SDL_DestroyMutex.mediawiki
@@ -14,7 +14,7 @@ void SDL_DestroyMutex(SDL_mutex* mutex)
 == Function Parameters ==
 {|
 |'''mutex'''
-|^a pointer to the SDL_mutex structure to be destroyed^
+|^a pointer to the SDL_mutex structure / mutex to be destroyed^
 |}
 
 == Code Examples ==
@@ -26,7 +26,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_CreateMutex]] ???
+:[[SDL_CreateMutex]] *
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
