--- a/SDL_DestroySemaphore.mediawiki
+++ b/SDL_DestroySemaphore.mediawiki
@@ -14,19 +14,24 @@ void SDL_DestroySemaphore(SDL_sem* sem)
 == Function Parameters ==
 {|
 |'''sem'''
-|^a pointer to the SDL_sem structure to be destroyed^
+|^a pointer to the SDL_sem structure / semaphore to be destroyed^
 |}
 
 == Code Examples ==
 ```c++
-You can add your code example here
+if (my_sem != NULL) {
+        SDL_DestroySemaphore(my_sem);
+        my_sem = NULL;
+}
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>It is not safe to destroy a semaphore if there are threads currently ,,blocked,, waiting on it. <br/>*
 
 == Related Functions ==
-:[[SDL_CreateSemaphore]] ???
+:[[SDL_CreateSemaphore]] *
+
+<<Color2(green,The old wiki lists the other Sem functions as RFs.)>>
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
