--- a/SDL_CreateSemaphore.mediawiki
+++ b/SDL_CreateSemaphore.mediawiki
@@ -33,7 +33,7 @@ if (my_sem == NULL) {
         return CREATE_SEM_FAILED;
 }
 ```
-*
+*<br/><<Color2(green,Should this example be expanded like the other Create functions and then Included on the SDL_DestroySemaphore page?)>>
 
 == Remarks ==
 *<br/>[[SDL_CreateSemaphore]]() creates a new semaphore and initializes it with the value '''initial_value'''. Each locking operation on the semaphore by [[SDL_SemWait]](), [[SDL_SemTryWait]]() or [[SDL_SemWaitTimeout]]() will atomically decrement the semaphore value. The locking operation will be blocked if the semaphore value is not positive (greater than zero). Each unlock operation by [[SDL_SemPost]]() will atomically increment the semaphore value. <br/>*
