--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -8,26 +8,29 @@ This guide provides instructions for adding your own content to the Code Example
 
 == Before You Start ==
 
-Anyone may contribute Code Examples or Remarks per the instructions in this Style Guide.  Please check back periodically for changes.
+Anyone may contribute '''Code Examples''' or '''Remarks''' per the instructions in this Style Guide.  Please check back periodically for updates.
 
-/!\ Due to spammers, write access to this wiki is disabled by default.  If you would like to contribute to this wiki, we welcome your contribution!  Just send e-mail to slouken@libsdl.org
+/!\ Due to spammers, write access to this wiki is disabled by default.  If you would like to contribute to this wiki, we welcome your contribution!  Just send an e-mail to slouken@libsdl.org
 
-If you would like to make other contributions beyond code examples and remarks, such as editing existing content or creating new pages, please email docs@libsdl.org to coordinate efforts.
+If you would like to make other contributions beyond code examples and remarks, such as editing existing content or developing tutorials, please email docs@libsdl.org to coordinate efforts.
 
 == The Basics ==
 
 <!> '''Existing content, including markup, should not be modified or removed.'''
 
 === Opening An Editor ===
-If a page can be edited you will see two options in the left column to choose from:
+If a page can be edited you will see two options to choose from in the left column:
  1. <<Color2(blue,Edit (Text))>>
   The Text editor provides more power/flexibility for editing than the GUI editor but requires that you know the wiki markup.  Use the Text editor to see the content with raw markup.  You will need to use the Preview feature to view the content as it will appear when saved.
- (!) '''Specific markup instructions on this page are for use with the Text editor but should also work in the GUI editor.'''
+ (!) '''Specific markup instructions in this guide are for use with the Text editor but should also work in the GUI editor.'''
  For information on wiki markup not included here, or other MoinMoin-specific questions, please see the [http://wiki.libsdl.org/moin.cgi/HelpOnEditing wiki help documentation].
 
  1. <<Color2(blue,Edit (GUI))>>
   The GUI editor provides buttons, much like a simple word processor, to add formatting markup such as bolding text, making a table, or creating a numbered list.  It is simpler to use than the Text editor but does not provide buttons for all the possible markup.  Use the GUI editor to see the content appear roughly as it would on the screen as you edit or if you do not know or want to use the wiki markup.
  (!) The GUI editor is fairly self-explanatory; however, if you require further assistance, see [http://wiki.libsdl.org/moin.cgi/HelpOnGraphicalEditor HelpOnGraphicalEditor] for more detailed instructions.
+
+Note that some formatting will appear slightly different in preview mode than on the finished screen.
+
 
 === Saving Your Changes ===
 Before you save your changes please include a note in the Comment field below the editing box that summarizes what you have done.
@@ -95,22 +98,25 @@ The Remarks section provides additional information related to other sections on
 
 <!> '''Do not remove or modify any existing remarks.'''
 
-* If your remark includes a reference to a function parameter or structure data field directly related to that page's topic use '''bold''' wherever the name is used (except in the Syntax section where formatting is automatic).
-   ```'''parameter'''``` = '''parameter'''
+* If your remark includes a reference to a function's parameter or structure's data field directly related to that page's topic use '''bold''' wherever the name is used.
+:''Markup'':  use 3 apostrophes surrounding the text for bold.
+    ```'''parameter'''``` = '''parameter'''
 : ''Example'': [[SDL_ConvertAudio]]()
 : ''Example'': [[SDL_AudioSpec]]
 * Do NOT use bold for enumeration value names.
 : ''Example'': [[SDL_GLattr]]
-: If your remark includes a reference to a parameter or data field in another function or structure than the one specifically discussed on that page (such as referencing a member of a structure on a function's page), use <code>monospace</code> wherever the name is used.
+: If your remark includes a reference to a parameter or data field in ''another'' function or structure than the one specifically discussed on that page (such as referencing a member of a structure on a function's page), use <code>monospace</code> wherever the name is used.
+:''Markup'':  use a single backtick surrounding the text for monospace.
    ```<code>member</code>``` = <code>member</code>
 : ''Example'': [[SDL_OpenAudio]]()
 
 * Create hyperlinks if you reference an existing function, enumeration, or structure.
   ~-''Note: Although the wiki will automatically create links in many cases, it does not recognize the SDL names correctly so you must manually hyperlink them.''-~<br/>
-  ```[[SDL_Function]]()```<br/>
-   Include open and closed parentheses after a function name, outside of the hyperlink markup.<br/>
-  ```[[SDL_Enumeration/Structure]]```<br/>
-   Do not use parentheses for enumerations or structures.
+:''Markup'':  use two brackets surrounding the page name (must be exact) for a link.
+   ```[[SDL_Function]]()``` = [[SDL_Function]]()
+: Include open and closed parentheses, outside of the hyperlink markup, after a function name. (see above)
+: Do not use parentheses for enumerations or structures.
+:```[[SDL_Enumeration/Structure]]```
 : ''Example'': [[SDL_BuildAudioCVT]]()
 
 
@@ -119,7 +125,7 @@ The Remarks section provides additional information related to other sections on
 
 When in doubt
  a) look for another page that contains the same thing you want to do and copy all the basics as much as applicable.  
- b) send a comment or question to docs@libsdl.org.
+ b) send a comment or question to docs@libsdl.org for clarification.
 
 If you have suggestions for changes or additions to this document or any other portion of the wiki please don't hesitate to contact docs@libsdl.org with your thoughts.  We are happy to have the participation!
 
