--- a/SDL_AudioSpec.mediawiki
+++ b/SDL_AudioSpec.mediawiki
@@ -4,11 +4,11 @@
 '''DRAFT'''
 
 = SDL_AudioSpec =
-A structure that ^contains^ ,,describes,, the audio output format. It ^also^ contains a callback that is called when the audio device needs more data.
+A structure that contains the audio output format. It ^also^ contains a callback that is called when the audio device needs more data.
 
 
 == Data Fields ==
-<<Color2(green,Should SDL_Audio<code></code>Callback not be a link because there won't be a page?  Can '''channels''' only be 1 or 2 or can it handle more? Old wiki lists 4 for surround and 6 for surround w/ center and lfe (sub?).  Should it be 1=mono instead of just 1 mono etc.?)>>
+<<Color2(green,Can '''channels''' only be 1 or 2 or can it handle more? Old wiki lists 4 for surround and 6 for surround w/ center and lfe (sub?).  Should it be 1=mono instead of just 1 mono etc.?)>>
 {|
 |int
 |'''freq'''
@@ -38,7 +38,7 @@ A structure that ^contains^ ,,describes,, the audio output format. It ^also^ con
 |'''size'''
 |audio buffer size in bytes (calculated)
 |-
-|[[SDL_AudioCallback]]
+|SDL_AudioCallback
 |'''callback'''
 |a function that is called when the audio device needs more data; see [[#callback|Remarks]] for details
 |-
