update content for consistency

--- a/SDL_HapticUpdateEffect.mediawiki
+++ b/SDL_HapticUpdateEffect.mediawiki
@@ -26,7 +26,7 @@ int SDL_HapticUpdateEffect(SDL_Haptic*       haptic,
 |}
 
 == Return Value ==
-Returns the ID of the effect on success, or -1 on error; call [[SDL_GetError]]() for more information.
+Returns the ID of the effect on success,,, or -1 on error,, ^or a negative error code on failure^; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-Can be used dynamically, although ''behavior'' when dynamically changing direction may be strange. Specifically the effect may re-upload itself and start playing from the start. You ^also^ cannot change the type ,,either,, when running [[SDL_HapticUpdateEffect]]().
+Can be used dynamically, although behavior when dynamically changing direction may be strange. Specifically the effect may re-upload itself and start playing from the start. You ^also^ cannot change the type ,,either,, when running [[SDL_HapticUpdateEffect]]().
 
 == Related Functions ==
 :[[SDL_HapticDestroyEffect]]
