--- a/SDL_HapticRunEffect.mediawiki
+++ b/SDL_HapticRunEffect.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_HapticRunEffect =
-Use this function to run the haptic effect on ''its associated'' haptic device.
+Use this function to run the haptic effect on its associated haptic device.
 
 
 == Syntax ==
@@ -16,17 +16,17 @@ int SDL_HapticRunEffect(SDL_Haptic* haptic,
 == Function Parameters ==
 {|
 |'''haptic'''
-|^a pointer to the^ haptic device to run the effect on
+|^a pointer to the^ haptic device to run the effect ,,on,,
 |-
 |'''effect'''
-|^ID^ ,,identifier,, of the haptic effect to run
+|^the ID^ ,,identifier,, of the haptic effect to run
 |-
 |'''iterations'''
-|^the^ number of iterations to run the effect; use SDL_HAPTIC_INFINITY for infinity
+|^the^ number of iterations to run the effect; use SDL_HAPTIC_INFINITY for infinity ''-or-'' ^the number of times to repeat the effect; see [[#Remarks|Remarks]] for details^
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 on error; call [[SDL_GetError]]() for more information.
+Returns 0 on success ^or a negative error code on failure^ ,,, or -1 on error,,; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -34,7 +34,14 @@ You can add your code example here
 ```
 
 == Remarks ==
-If iterations are SDL_HAPTIC_INFINITY, it'll run the effect over and over repeating the envelope (attack and fade) every time. If you only want the effect to last forever, set SDL_HAPTIC_INFINITY in the effect's length parameter. <<Color2(green,This doesn't really make sense but I don't have enough info to suggest a fix.)>>
+If '''iterations''' are SDL_HAPTIC_INFINITY, it'll run the effect over and over repeating the envelope (attack and fade) every time. If you only want the effect to last forever, set SDL_HAPTIC_INFINITY in the effect's <code>length</code> parameter. 
+
+''-or-''
+
+To repeat the effect over and over indefinitely, set '''iterations''' to SDL_HAPTIC_INFINITY.  (Repeats the envelope - attack and fade.)  To make one instance of the effect last indefinitely (so the effect does not fade), set the effect's <code>length</code> ^in its structure/union^ to SDL_HAPTIC_INFINITY ^instead^.
+
+<<Color2(green,Is it important to say how to end an effect that has an SDL_HAPTIC_INFINITY setting or is it enough to list the destroy function below?)>>
+
 
 == Related Functions ==
 :[[SDL_HapticDestroyEffect]]
