--- a/SDL_HapticGetEffectStatus.mediawiki
+++ b/SDL_HapticGetEffectStatus.mediawiki
@@ -18,11 +18,11 @@ int SDL_HapticGetEffectStatus(SDL_Haptic* haptic,
 |^the^ haptic device to query ^for^ ,,the,, effect status ,,on,,
 |-
 |'''effect'''
-|^ID^ ,,identifier,, of the ^haptic^ effect to query ,,it's status,,
+|^the ID^ ,,identifier,, of the ^haptic^ effect to query ,,it's status,,
 |}
 
 == Return Value ==
-Returns 0 if it isn't playing, SDL_HAPTIC_PLAYING if it is playing, or -1 on error; call [[SDL_GetError]]() for more information.
+Returns 0 if it isn't playing, SDL_HAPTIC_PLAYING if it is playing, ^or a negative error code on failure^,, -1 on error,,; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
