--- a/SDL_AtomicUnlock.mediawiki
+++ b/SDL_AtomicUnlock.mediawiki
@@ -14,8 +14,9 @@ void SDL_AtomicUnlock(SDL_SpinLock* lock)
 == Function Parameters ==
 {|
 |'''lock'''
-|points to the lock
+|,,points to the lock,, ^a pointer to the desired spin lock^
 |}
+<<Color2(green,Does the function change the setting of the lock struct to 0 automatically when it is called?  Lock changes it back to non-0?)>>
 
 == Code Examples ==
 ```c++
@@ -24,6 +25,9 @@ You can add your code example here
 
 == Remarks ==
 The spin lock functions and type are required and can not be emulated because they are used in the emulation code.
+
+<<Color2(green,Would the following site be a relevant link here or perhaps in a more detailed section on this topic?)>>
+http://en.wikipedia.org/wiki/Spin_lock
 
 == Related Functions ==
 :[[SDL_AtomicLock]]
