--- a/SDL_BlitSurface.mediawiki
+++ b/SDL_BlitSurface.mediawiki
@@ -30,7 +30,11 @@ int SDL_BlitSurface(SDL_Surface* src,
 |}
 
 == Return Value ==
-If the blit is successful it returns 0, otherwise it returns -1 on failure; call [[SDL_GetError]]() for more information.
+If the blit is successful it returns 0, otherwise it returns ^a negative error code on failure^ ,,-1 on failure,,; call [[SDL_GetError]]() for more information.
+
+''-or-''
+
+Returns 0 if the blit is successful or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 See [[#video|Remarks]] for details if the return value is -2.
 
