--- a/SDL_BuildAudioCVT.mediawiki
+++ b/SDL_BuildAudioCVT.mediawiki
@@ -44,7 +44,7 @@ int SDL_BuildAudioCVT(SDL_AudioCVT*   cvt,
 <<Color2(green,Should "frequency or samples-per-second" be changed to "frequency (samples per second)" or can rate be two different types of units?)>>
 
 == Return Value ==
-Returns 1 if the audio filter is set up, 0 if there's no conversion needed, or -1 if the format conversion is not supported; call [[SDL_GetError]]() for more information.
+Returns 1 if the audio filter is set up, 0 if there's no conversion needed, or ^a negative error code on failure^ ,,-1 if the format conversion is not supported,,; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -57,6 +57,8 @@ Before an [[SDL_AudioCVT]] structure can be used to convert audio data it must b
 For information on audio formats see [[SDL_AudioSpec]].
 
 *<br/>Currently only rate conversions of 2^x^ and (1/2)^x^ with x > 0 are done, ,,nearing,, ^whichever most closely approximates^ the requested rate conversion.<br/>*
+
+^If audio format conversion is not supported this function returns -1.^  <<Color2(green,Is there a 'you can call' function to get more information in this case like there was for SetTextureScaleMode SetTextureColorMod SetTextureBlendMode SetTextureAlphaMod etc?)>>
 
 == Related Functions ==
  [[SDL_ConvertAudio]]
