--- a/SDL_AudioQuit.mediawiki
+++ b/SDL_AudioQuit.mediawiki
@@ -16,7 +16,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function is used internally, and should not be used unless you have a specific need to specify the audio driver you want to use. You should normally use [[SDL_Quit]]() or [[SDL_QuitSubSystem]](). 
+This function is used internally, and should not be used unless you have a specific need to ^designate^ ,,specify,, the audio driver you want to use. You should normally use [[SDL_Quit]]() or [[SDL_QuitSubSystem]](). 
 
 == Related Functions ==
  [[SDL_AudioInit]]
