--- a/SDL_SetWindowTitle.mediawiki
+++ b/SDL_SetWindowTitle.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_SetWindowTitle =
-Use this function to set the title of the window, in UTF-8 format.
+Use this function to set the title of the window.
 
 
 == Syntax ==
@@ -18,7 +17,7 @@ void SDL_SetWindowTitle(SDL_Window* window,
 |the window to change
 |-
 |'''title'''
-|the desired window title
+|the desired window title in UTF-8 format
 |}
 
 == Code Examples ==
