--- a/SDL_ShowWindow.mediawiki
+++ b/SDL_ShowWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_ShowWindow =
-Use this function to show the window.
+Use this function to show a window.
 
 
 == Syntax ==
