--- a/SDL_UpdateTexture.mediawiki
+++ b/SDL_UpdateTexture.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_UpdateTexture =
 Use this function to update the given texture rectangle with new pixel data.
@@ -22,7 +19,7 @@ int SDL_UpdateTexture(SDL_Texture*    texture,
 |the texture to update
 |-
 |'''rect'''
-|a pointer to the ,,rectangle of,, ^[[SDL_Rect]] with^ pixels to update, or NULL to update the entire texture
+|a pointer to the rectangle of type [[SDL_Rect]] to update, or NULL to update the entire texture
 |-
 |'''pixels'''
 |the raw pixel data
@@ -32,7 +29,7 @@ int SDL_UpdateTexture(SDL_Texture*    texture,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -40,10 +37,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-This is a fairly slow function.
+This is a fairly slow function.  It is not intended for use with streaming textures.
 
-== Related Functions ==
-:[[SDL_CreateTexture]]???
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
