--- a/SDL_VideoInit.mediawiki
+++ b/SDL_VideoInit.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_VideoInit =
 Use this function to initialize the video subsystem, optionally specifying a video driver.
@@ -62,7 +61,11 @@ If you use this function and you haven't used the SDL_INIT_VIDEO flag with eithe
 
 It is safe to call this function multiple times. [[SDL_VideoInit]]() will call [[SDL_VideoQuit]]() itself if the video subsystem has already been initialized.
 
+You can use [[SDL_GetNumVideoDrivers]]() or [[SDL_GetVideoDriver]]() to find a specific '''driver_name'''.
+
 == Related Functions ==
+:[[SDL_GetNumVideoDrivers]]
+:[[SDL_GetVideoDriver]]
 :[[SDL_InitSubSystem]]
 :[[SDL_VideoQuit]]
 
