--- a/SDL_GetWindowID.mediawiki
+++ b/SDL_GetWindowID.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetWindowID =
-Use this function to get the numeric ID of the window.
+Use this function to get the numeric ID of a window, for logging purposes.
 
 
 == Syntax ==
