--- a/SDL_VideoQuit.mediawiki
+++ b/SDL_VideoQuit.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_VideoQuit =
-Use this function to shut down the video subsystem.
+Use this function to shut down the video subsystem, if initialized with [[SDL_VideoInit]]().
 
 
 == Syntax ==
