--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_Color =
-A structure that contains color information.
+A structure that represents a color.
 
 
 == Data Fields ==
@@ -22,7 +21,7 @@ A structure that contains color information.
 |-
 |<style="color: #808080;">Uint8
 |<style="color: #808080;">'''unused'''
-|<style="color: #808080;">32 bit placeholder
+|<style="color: #808080;">
 |}
 
 == Code Examples ==
@@ -38,7 +37,7 @@ If you have RGB color values you would use decimal values in this struct.
 If you have HTML color codes you would use hexidecimal values in this struct.  
  ''Example'': orange = #FFA500 so set r=0xFF, g=0xA5, b=0x00.
 
-*<br/>[[SDL_Color]] describes a color in a format independent way. You can convert an SDL_Color to a pixel value for a certain pixel format using [[SDL_MapRGB]]().<br/>*
+[[SDL_Color]] describes a color in a format independent way. You can convert an [[SDL_Color]] to a pixel value for a certain pixel format using [[SDL_MapRGB]]().
 
 == Related Structures ==
 :[[SDL_Palette]]
