update content (w/ Sam); remove 'draft' note

--- a/SDL_Palette.mediawiki
+++ b/SDL_Palette.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_Palette =
 A structure that contains palette information.
@@ -31,9 +30,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>Each pixel in an 8-bit surface is an index into the '''colors''' field of the [[SDL_Palette]] structure stored in [[SDL_PixelFormat]]. An [[SDL_Palette]] should never need to be created manually. It is automatically created when SDL allocates an [[SDL_PixelFormat]] for a surface. The '''colors''' values of an [[SDL_Surface]]'s palette can be set with [[SDL_SetColors]]().
+Each pixel in an 8-bit surface is an index into the '''colors''' field of the [[SDL_Palette]] structure stored in [[SDL_PixelFormat]]. An [[SDL_Palette]] should never need to be created manually. It is automatically created when SDL allocates an [[SDL_PixelFormat]] for a surface. The '''colors''' values of an [[SDL_Surface]]'s palette can be set with [[SDL_SetPaletteColors]]().
 
-<<Color2(green,Is SDL_SetColors now SDL_SetPaletteColors?)>><br/>*
 
 == Related Structures ==
 :[[SDL_PixelFormat]]
