--- a/SDL_GetWindowData.mediawiki
+++ b/SDL_GetWindowData.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetWindowData =
-Use this function to retrieve the data pointer associated with the window.
+Use this function to retrieve the data pointer associated with a window.
 
 
 == Syntax ==
