--- a/SDL_SetWindowPosition.mediawiki
+++ b/SDL_SetWindowPosition.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SetWindowPosition =
-Use this function to set the position of the window.
+Use this function to set the position of a window.
 
 
 == Syntax ==
