--- a/SDL_GetWindowPosition.mediawiki
+++ b/SDL_GetWindowPosition.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetWindowPosition =
-Use this function to get the position of the window.
+Use this function to get the position of a window.
 
 
 == Syntax ==
