update content - "the" to "a" window update

--- a/SDL_GetWindowSize.mediawiki
+++ b/SDL_GetWindowSize.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetWindowSize =
-Use this function to get the size of the window's client area.
+Use this function to get the size of a window's client area.
 
 
 == Syntax ==
