--- a/SDL_HideWindow.mediawiki
+++ b/SDL_HideWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_HideWindow =
-Use this function to hide the window.
+Use this function to hide a window.
 
 
 == Syntax ==
