update content - "the" to "a" window update

--- a/SDL_RaiseWindow.mediawiki
+++ b/SDL_RaiseWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_RaiseWindow =
-Use this function to raise the window above other windows and set the input focus.
+Use this function to raise a window above other windows and set the input focus.
 
 
 == Syntax ==
