--- a/SDL_MinimizeWindow.mediawiki
+++ b/SDL_MinimizeWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_MinimizeWindow =
-Use this function to minimize the window to an iconic representation.
+Use this function to minimize a window to an iconic representation.
 
 
 == Syntax ==
