--- a/SDL_SetWindowFullscreen.mediawiki
+++ b/SDL_SetWindowFullscreen.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SetWindowFullscreen =
-Use this function to set the window's fullscreen state.
+Use this function to set a window's fullscreen state.
 
 
 == Syntax ==
