--- a/SDL_SetWindowGrab.mediawiki
+++ b/SDL_SetWindowGrab.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SetWindowGrab =
-Use this function to set the window's input grab mode.
+Use this function to set a window's input grab mode.
 
 
 == Syntax ==
