update content - "the" to "a" window update

--- a/SDL_GetWindowGrab.mediawiki
+++ b/SDL_GetWindowGrab.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetWindowGrab =
-Use this function to get the window's input grab mode.
+Use this function to get a window's input grab mode.
 
 
 == Syntax ==
