--- a/SDL_GL_SwapWindow.mediawiki
+++ b/SDL_GL_SwapWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GL_SwapWindow =
-Use this function to update the window with OpenGL rendering.
+Use this function to update a window with OpenGL rendering.
 
 
 == Syntax ==
